@@ -1,3 +1,6 @@
+2009-03-11
+Changed db_file::cleanup() to use LEFT and LOCATE instead of REGEXP
+
 2009-03-10
 Fixed some searching and sorting problems in the db_files module
 Fixed the fs_module::out() methods to work with new convention
